[tool.poetry]
name = "starlite-tile38"
version = "0.1.0"
description = "Starlite API do interact with Tile38"
authors = ["Benjamin Ramser <legionaerr@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlite = "^1.2.4"
uvicorn = "^0.17.6"
pyle38 = "^0.6.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pre-commit = "^2.15.0"
black = "^22.1"
gitlint = "^0.17.0"
poethepoet = "^0.13.1"
isort = "^5.9.3"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pytest-asyncio = "^0.18.2"
mypy = "^0.941"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.8
ignore_missing_imports = true

[tool.poe.tasks]
test       = "poetry run pytest -vv -s src/tests/"
test-cov   = "poetry run pytest -vv -s --cov=starlite-tile38 src/tests/"
mypy       = "poetry run mypy --ignore-missing-imports --config-file pyproject.toml"
lint       = "flake8 ."
up         = "docker-compose up"
down       = "docker-compose down"
