[tool.poetry]
name = "starlite-tile38"
version = "0.1.0"
description = "Starlite API do interact with Tile38"
authors = ["Benjamin Ramser <legionaerr@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlite = "^1.26.1"
uvicorn = "^0.18.3"
pyle38 = "^0.7.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pre-commit = "^2.20.0"
black = "^22.10"
gitlint = "^0.17.0"
poethepoet = "^0.16.2"
isort = "^5.9.3"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
pytest-asyncio = "^0.19.0"
mypy = "^0.982"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.8
ignore_missing_imports = true

[tool.poe.tasks]
test       = "poetry run pytest -vv --asyncio-mode=auto -s src/tests/"
test-cov   = "poetry run pytest -vv --asyncio-mode=auto -s --cov=starlite-tile38 src/tests/"
mypy       = "poetry run mypy --ignore-missing-imports --config-file pyproject.toml"
lint       = "flake8 ."
up         = "docker-compose up"
down       = "docker-compose down"
