[tool.poetry]
name = "starlite-tile38"
version = "0.1.0"
description = "Starlite API do interact with Tile38"
authors = ["Benjamin Ramser <legionaerr@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.51.12"
uvicorn = "^0.22.0"
pyle38 = "^0.9.1"
pydantic = {extras = ["dotenv"], version = "^1.10.10"}

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pre-commit = "^3.3.3"
black = "^23.3"
gitlint = "^0.19.1"
poethepoet = "^0.20.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.4"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.8
ignore_missing_imports = true

[tool.poe.tasks]
test       = "poetry run pytest -vv --asyncio-mode=auto -s src/tests/"
test-cov   = "poetry run pytest -vv --asyncio-mode=auto -s --cov=starlite-tile38 src/tests/"
mypy       = "poetry run mypy --ignore-missing-imports --config-file pyproject.toml"
lint       = "flake8 ."
up         = "docker-compose up"
down       = "docker-compose down"
